<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.Login"
	android:background="@color/abu1"
	android:padding="25dp">

	<TextView
		android:id="@+id/txt_signin"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:textSize="30sp"
		android:textStyle="bold"
		android:text="@string/signin"/>

	<TextView
		android:id="@+id/txt_firstlgn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txt_signin"
		android:layout_marginTop="10dp"
		android:text="@string/first_lgn"
		android:textColor="#616161" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="350dp"
		android:layout_marginTop="150dp"
		android:background="@drawable/bg"
		android:orientation="vertical">

		<EditText
			android:id="@+id/txt_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:layout_marginTop="50dp"
			android:layout_marginEnd="10dp"
			android:autofillHints="@string/email"
			android:hint="@string/email"
			android:inputType="textEmailAddress"
			android:minHeight="48dp" />

		<EditText
			android:id="@+id/txt_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginEnd="10dp"
			android:autofillHints="@string/password"
			android:hint="@string/password"
			android:inputType="textPassword"
			android:minHeight="48dp" />

		<Button
			android:id="@+id/btn_login"
			android:layout_width="200dp"
			android:layout_height="50dp"
			android:layout_gravity="center"
			android:layout_marginTop="50dp"
			android:background="@drawable/buttonstyle"
			android:text="@string/login"
			android:textAllCaps="false"
			android:textColor="#4E342E"
			app:backgroundTint="@color/biru1"
			tools:ignore="TextContrastCheck" />

		<TextView
			android:id="@+id/txtPassword"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="30dp"
			android:text="@string/daftar" />

	</LinearLayout>

</RelativeLayout>
