<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:padding="20dp"
	android:background="@color/abu1"
	tools:context=".fragment.home_fragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="10dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dashboard"
			android:textSize="30sp"
			android:textStyle="bold"
			android:textColor="@color/black"
			android:layout_marginBottom="20dp"/>

		<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:focusable="true"
			android:foreground="?android:attr/selectableItemBackground"
			app:cardElevation="1dp"
			app:cardCornerRadius="10dp"
			android:layout_margin="2dp"
			android:backgroundTint="@color/white">

			<LinearLayout
				android:weightSum="2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<LinearLayout
					android:layout_weight="1.3"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					<TextView
						android:id="@+id/txt_nama_kafe"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/deteksicovid_app"
						android:textSize="25sp"
						android:textColor="@color/black"
						android:textStyle="bold"
						android:layout_marginTop="10dp"
						android:layout_marginStart="10dp"/>

					<TextView
						android:id="@+id/txt_alamat"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/splash1"
						android:textSize="12sp"
						android:textColor="@color/black"
						android:layout_marginTop="10dp"
						android:layout_marginStart="10dp"
						android:layout_marginEnd="10dp"/>
				</LinearLayout>

				<ImageView
					android:padding="10dp"
					android:id="@+id/img1"
					android:layout_weight="0.7"
					android:layout_width="0dp"
					android:layout_height="100dp"
					android:src="@drawable/ic_splash"
					android:contentDescription="@string/ic_splash"/>

			</LinearLayout>


		</androidx.cardview.widget.CardView>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:layout_marginBottom="5dp"
			android:text="@string/my_menu"
			android:textSize="15sp"
			android:textColor="@color/black"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="2">

			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="5dp"
				android:clickable="true"
				android:focusable="true"
				android:foreground="?android:attr/selectableItemBackground"
				app:cardCornerRadius="15dp"
				android:backgroundTint="@color/white">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="15dp">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/detect"
						android:contentDescription="@string/deteksi_covid"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/deteksi_covid"
						android:layout_marginTop="8dp"
						android:textColor="@color/black"/>

				</LinearLayout>

			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="5dp"
				android:clickable="true"
				android:focusable="true"
				android:foreground="?android:attr/selectableItemBackground"
				app:cardCornerRadius="15dp"
				android:backgroundTint="@color/white">


				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="15dp">
					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/jadwal"
						android:contentDescription="@string/jadwal"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/jadwal"
						android:layout_marginTop="8dp"
						android:textColor="@color/black"/>
				</LinearLayout>
			</androidx.cardview.widget.CardView>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="2">

			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="5dp"
				android:clickable="true"
				android:focusable="true"
				android:foreground="?android:attr/selectableItemBackground"
				app:cardCornerRadius="15dp"
				android:backgroundTint="@color/white">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="15dp">
					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/list"
						android:contentDescription="@string/daftar_vaksin"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/daftar_vaksin"
						android:layout_marginTop="8dp"
						android:textColor="@color/black"/>
				</LinearLayout>

			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="5dp"
				android:clickable="true"
				android:focusable="true"
				android:foreground="?android:attr/selectableItemBackground"
				app:cardCornerRadius="15dp"
				android:backgroundTint="@color/white">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="15dp">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/berita"
						android:contentDescription="@string/berita_informasi"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/berita_informasi"
                        android:textColor="@color/black" />
                </LinearLayout>
			</androidx.cardview.widget.CardView>

		</LinearLayout>

	</LinearLayout>
</FrameLayout>
