<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Detail_sertifikatvaksin"
	android:background="@color/abu1"
	android:padding="25dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_arrow_back"
				android:contentDescription="@string/panah"
				/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="22sp"
				android:textColor="@color/black"
				android:text="@string/daftar_vaksin"
				android:layout_marginBottom="3dp"
				android:textAlignment="center"
				/>
		</LinearLayout>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginTop="10dp"
			android:background="@color/black"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="10dp"
			/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="450dp"
			android:layout_marginTop="25dp"
			android:background="@drawable/bg"
			android:orientation="vertical">

			<EditText
				android:id="@+id/txt_nama"
				android:layout_marginTop="50dp"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/notelp"
				android:autofillHints="@string/notelp"
				android:inputType="text"/>
			<Spinner
				android:id="@+id/listItem"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:entries="@array/gelombang_vaksin"
				android:padding="15dp">
			</Spinner>

			<Button
				android:id="@+id/login"
				android:layout_width="200dp"
				android:layout_height="50dp"
				android:layout_marginTop="50dp"
				android:textColor="@color/white"
				android:text="@string/btn_simpan"
				android:textAllCaps="false"
				android:background="@drawable/buttonstyle"
				app:backgroundTint="@color/biru1"
				android:layout_gravity="center"/>

		</LinearLayout>

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
